# trurlic

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml  install.sh
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  codeql.yml  codspeed.yml  release.yml
benches/: store.rs
src/: cli.rs  commands.rs  config.rs  conversation.rs  error.rs  lib.rs  provider.rs  store.rs
src/commands/: bootstrap.rs  component.rs  decision.rs  design.rs  gc.rs  init.rs  install.rs  map.rs  migrate.rs  mod.rs  query.rs  serve.rs
src/conversation/: extract.rs  mod.rs  prompt.rs  session.rs
src/map/: api.rs  diff.rs  embed.rs  index.html  layout.rs  mod.rs  watcher.rs  ws.rs
src/map/frontend/: .npmrc  package-lock.json  package.json  tsconfig.json
src/map/frontend/src/: camera.test.ts  graph.ts  index.html  layout.test.ts  lod.test.ts  main.ts  panel.ts  quadtree.test.ts  quadtree.ts  renderer.ts  search.test.ts  style.css  types.ts  util.test.ts  util.ts
src/map/frontend/src/app/: drag.test.ts  drag.ts  edge-hit.test.ts  edge-hit.ts  filters.ts  hover.test.ts  hover.ts  navigation.ts  selection.test.ts  selection.ts  undo.ts
src/map/frontend/src/layout/: force.ts
src/map/frontend/src/renderer/: camera.ts  canvas.ts  culling.test.ts  culling.ts  edges.test.ts  edges.ts  geometry.test.ts  geometry.ts
src/map/frontend/src/state/: graph.test.ts  graph.ts  ws.ts
src/map/frontend/src/ui/: breadcrumb.ts  command.ts  panel.test.ts  panel.ts  toolbar.ts
src/mcp/: advance.rs  context.rs  mod.rs  prompts.rs  protocol.rs  tools.rs  update.rs  verify.rs  watcher.rs  write.rs
src/provider/: anthropic.rs  gemini.rs  mod.rs  openai.rs  sse.rs
src/session/: bootstrap.rs  driver.rs  extract.rs  files.rs  mod.rs  persistence.rs
src/store/: cascade.rs  graph.rs  limits.rs  mod.rs  query.rs  schema.rs  state.rs  validate.rs  write.rs
src/workflow/: action.rs  advance.rs  concerns.rs  mod.rs  steps.rs
