[package]
name = "trurlic"
version = "0.3.1"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["m2papierz@gmail.com"]
repository = "https://github.com/trurlic-labs/trurlic"
homepage = "https://github.com/trurlic-labs/trurlic"
readme = "README.md"
description = "Structured architectural decisions that constrain AI code generation"
keywords = ["architecture", "decisions", "mcp", "ai", "code-generation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "trurlic"
path = "src/main.rs"

[lib]
name = "trurlic"
path = "src/lib.rs"

[[bench]]
name = "store"
harness = false

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
toml  = "1"

# Error handling
thiserror = "2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }

# Content hashing (pure Rust, no C/OpenSSL dependency)
blake3 = "1"

# Parallel file I/O for load_state
rayon = "1"

# File locking (cross-platform flock)
fs2 = "0.4"

# File system watcher for live reload
notify = "6"

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "net", "signal", "sync"] }

# HTTP server for map (WebSocket via `ws` feature)
axum = { version = "0.7", features = ["ws"] }

# HTTP middleware: security headers
tower-http = { version = "0.6", features = ["cors", "set-header"] }

# Embed frontend assets in binary (map)
rust-embed = "8"

# Cross-platform browser launch (map)
opener = "0.8"

# Cryptographic random token generation (map)
rand = "0.8"

# Atomic file writes (install command)
tempfile = "3"

[dev-dependencies]
criterion = { version = "2", package = "codspeed-criterion-compat", default-features = false }
tempfile = "3"

[lints.rust]
unsafe_code = "deny"

# ── Build profiles ─────────────────────────────────────────────────────────────

[profile.dev]
opt-level = 0
debug     = true

[profile.dev.package."*"]
opt-level = 2

[profile.test]
inherits = "dev"

[profile.release]
strip           = true
lto             = "fat"
codegen-units   = 1
overflow-checks = true
panic           = "abort"

[profile.bench]
inherits = "release"
strip    = false
debug    = 2
